# agentic_rag_chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
claude file/: CLAUDE.md  implementation_plan.md
configs/: config.yaml
data/: golden_dataset.json
scripts/: init-db.sql
skills/: evaluation_skill.md  generation_skill.md  ingestion_skill.md  orchestration_skill.md  retreival_skill.md
src/: __init__.py
src/agents/: __init__.py  orchestrator.py  query_router.py
src/api/: __init__.py  auth.py  main.py  models.py  streaming.py
src/core/: __init__.py  config.py  feedback_store.py  logging.py  memory.py  milestone_retriever.py  milestone_utils.py  reranker.py  session_store.py  term_expander.py  vector_store.py
src/evaluation/: __init__.py  faithfulness_gri.py  metrics.py  pipeline.py  term_accuracy.py
src/generation/: __init__.py  context_formatter.py  generator.py  postprocessor.py  prompts.py
src/ingestion/: __init__.py  chunker.py  glossary_extractor.py  models.py  parser.py  pipeline.py  table_extractor.py
src/tools/: __init__.py  compare.py  definitions.py  executor.py  glossary.py  milestones.py  phases.py  retrieve_gri.py
tests/: __init__.py  test_api.py  test_evaluation_gri.py
tests/e2e/: __init__.py  test_api_scenarios.py  test_full_pipeline.py  test_sessions.py
tests/integration/: __init__.py  test_orchestrator_tools.py  test_pipeline.py  test_vector_store.py
tests/performance/: __init__.py  test_latency.py
tests/unit/: test_generation.py  test_ingestion.py  test_milestone_utils.py  test_orchestrator.py  test_retrieval.py
